# game-medly

./: .gitattributes  README.md  game-medly.code-workspace  index.html
heaps-jelly/: hl.hxml  index.html  js.hxml
heaps-jelly/src/: Bubble.hx  Constants.hx  Game.hx  JellyMath.hx  Water.hx
jinx/: CMakeLists.txt  LICENSE  README.md
jinx/scripts/: getdeps.sh  winbuild.sh
jinx/src/jinx/inc/: jinx.h  renderer.h  scripting.h  window.h
jinx/src/jinx/src/: renderer.cc  renderer.cpp
jinx/src/test/: main.cpp
jinx/tools/: README.md
kafei/: .clang-format  CMakeLists.txt  README.md
kafei/scripts/: run.sh  setup.sh  winbuild.sh
kafei/src/kafei/: Config.h  Renderer.cpp  ResourceManager.cpp  ResourceManager.h  Shader.h  Window.h  common.h  config.h  game.h  kafei.h  quad.h  render.h  renderer.cpp  renderer.h  shader.h  texture.h  typedefs.h  window.h  world.h  world_manager.h
kafei/src/kafei/dead/: Triangle.h
kafei/src/kafei/inc/: Kafei.h  Shader.h  kafei.h  renderer.h  scripting.h  window.h
kafei/src/kafei/render/: kafgl.h  quad.h  shader.h
kafei/src/kafei/src/: renderer.cpp
kafei/src/kafei/util/: ResourceManager.cpp  ResourceManager.h  resource_manager.cpp  resource_manager.h
kafei/src/res/shaders/: default.frag  default.vert  texture.vert
kafei/src/test/: main.cpp
roame/: .gitmodules  CMakeLists.txt  README.md
roame/scripts/: winbuild.sh
roame/src/roame/: README.md
roame/src/roame/components/: README.md  sprite_renderer.h
roame/src/roame/inc/: component.h  config.h  controller.h  entity.h  entity_manager.h  game.h  object.h  resource_loader.h  sprite.h  sprite_manager.h  typedefs.h  world.h
roame/src/roame/src/: game.cpp
roame/src/test/: main.cpp
roame/src/test/components/: test_component.h
